--- a/Support.html
+++ b/Support.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Support</title>
+  <title>Support – GurungTalks</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 700px;
+      margin: 50px auto;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-  <h1>Support</h1>
-  <p>If you need help, contact us at <a href="mailto:GurungTalks@email.com">your@email.com</a>.</p>
+  <h1>Support – GurungTalks</h1>
+  <p>Welcome to the official support page for the <strong>GurungTalks</strong> mobile app.</p>
+
+  <h2>Contact Us</h2>
+  <p>If you're experiencing issues or have any questions about the app, feel free to contact us:</p>
+  <ul>
+    <li>Email: <a href="mailto:support@gurungtalks.com">support@gurungtalks.com</a></li>
+  </ul>
+
+  <h2>Helpful Links</h2>
+  <ul>
+    <li><a href="privacy.html">Privacy Policy</a></li>
+  </ul>
+
+  <p>We usually respond to support requests within 1–2 business days.</p>
+
+  <hr>
+  <p>&copy; 2025 GurungTalks. All rights reserved.</p>
 </body>
 </html>
